Force eclipse wtp settings on core projects.

--- a/build.gradle
+++ b/build.gradle
@@ -85,3 +85,6 @@ installApp {
 task wrapper(type: Wrapper) {
 	gradleVersion = "2.0"
 }
+
+// force wtp settings on subprojects
+apply from: 'gradle/force-wtp.gradle'
