--- a/axelor-core/build.gradle
+++ b/axelor-core/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 		exclude module: "c3p0"
 	}
 
-	compile 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.5.2'
+	compile libs.eclipselink_moxy
 
 	compile "commons-jxpath:commons-jxpath:1.3"
 	compile "com.beust:jcommander:1.32"
