--- a/axelor-gradle/src/init.d/02-libs.gradle
+++ b/axelor-gradle/src/init.d/02-libs.gradle
@@ -39,6 +39,9 @@ def libs = [
 	hibernate_ehcache: 	"org.hibernate:hibernate-ehcache:4.2.8.Final",
 	ehcache:		   	"net.sf.ehcache:ehcache:2.8.1",
 
+	// eclipselink
+	eclipselink_moxy:	"org.eclipse.persistence:org.eclipse.persistence.moxy:2.5.2",
+
 	// groovy
 	groovy:				"org.codehaus.groovy:groovy-all:2.2.1:indy",
 
